# BuildMind

./: .env.example  .gitignore  README.md  buildmind_report.md  pyproject.toml  requirements.txt  test_mcp_flow.py  test_mcp_integration.py
.github/workflows/: publish.yml
buildmind/: __init__.py  cli.py
buildmind/config/: __init__.py  settings.py
buildmind/core/: __init__.py  decision_classifier.py  decision_engine.py  executor.py  explanation_engine.py  export_engine.py  file_writer.py  task_decomposer.py
buildmind/llm/: __init__.py  client.py
buildmind/models/: __init__.py  decision.py  project.py  task.py
buildmind/prompts/: __init__.py  classifier_system.txt  classifier_user.txt  decision_card_system.txt  decision_card_user.txt  decomposer_system.txt  decomposer_user.txt  executor_system.txt  executor_user.txt  explainer_system.txt  explainer_user.txt  loader.py
buildmind/server/: mcp_server.py
buildmind/storage/: __init__.py  audit_log.py  project_store.py
buildmind/ui/: __init__.py  decision_ui.py  graph_ui.py  terminal.py
scratch/: find_proc.py  kill_proc.py  test_direct_mcp.py  test_tool_call.py
tests/: test_0_preflight.py  test_2_fake_session.py  test_6_stdio_clean.py
